--- a/home.html
+++ b/home.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>Myllan Island Resort</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <img src="up.jpeg">
   <h1>WORLDS FINEST ISLAND RESORT</h1>
   <h2>MYLLAN RESORT</h2>
   <p>We take pride in ensuring our guest the most relaxing and comfortable stay in our fully furnished rooms and a spectacular view of the ocean.<br>For dining and entertainment guest choose from themed restaurants,exclusive beach bar and three great bars.There are seven outdoor swimming pools with waterslides and diving boards.There is also a tennis court that also serves as a landing ground for helicopters.</p>
