--- a/accommodation/modation.html
+++ b/accommodation/modation.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>accommodation</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css"
 </head>
 <boby>
   <h1>ACCOMMODATION<h1>
