added the link to the css page.

--- a/activities/vities.html
+++ b/activities/vities.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Actvities</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <img src="k.jpeg">
