--- a/home.html
+++ b/home.html
@@ -10,5 +10,6 @@
   <h2>MYLLAN RESORT</h2>
   <p>We take pride in ensuring our guest the most relaxing and comfortable stay in our fully furnished rooms and a spectacular view of the ocean.<br>For dining and entertainment guest choose from themed restaurants,exclusive beach bar and three great bars.There are seven outdoor swimming pools with waterslides and diving boards.There is also a tennis court that also serves as a landing ground for helicopters.</p>
   <p>For accommodation <a href="accommodation/modation.html"> click here.</a></p>
+  <p>For activities <a href="activities/vities.html">Click here.</a></p>
 </body>
 <html>
